Trying to fix layout issues

--- a/_sass/3-sections/_page.sass
+++ b/_sass/3-sections/_page.sass
@@ -1,6 +1,8 @@
 .page-content
+  display: block
   width: 900px
-  margin: auto
+  margin-left: auto
+  margin-right: auto
   h1
     line-height: 1.5
     color: black
